// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SparkBar 25 data points 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={49.45054945054945}
    width={5.44}
    x={0}
    y={40.54945054945055}
  />
  <rect
    fill="#2ebd59"
    height={79.12087912087912}
    width={5.44}
    x={6.44}
    y={10.879120879120876}
  />
  <rect
    fill="#2ebd59"
    height={87.03296703296704}
    width={5.44}
    x={12.88}
    y={2.9670329670329636}
  />
  <rect
    fill="#2ebd59"
    height={31.64835164835165}
    width={5.44}
    x={19.32}
    y={58.35164835164835}
  />
  <rect
    fill="#2ebd59"
    height={51.42857142857142}
    width={5.44}
    x={25.76}
    y={38.57142857142858}
  />
  <rect
    fill="#2ebd59"
    height={48.46153846153846}
    width={5.44}
    x={32.2}
    y={41.53846153846154}
  />
  <rect
    fill="#2ebd59"
    height={87.03296703296704}
    width={5.44}
    x={38.64}
    y={2.9670329670329636}
  />
  <rect
    fill="#2ebd59"
    height={71.20879120879121}
    width={5.44}
    x={45.080000000000005}
    y={18.79120879120879}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={5.44}
    x={51.52}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height={48.46153846153846}
    width={5.44}
    x={57.96}
    y={41.53846153846154}
  />
  <rect
    fill="#2ebd59"
    height={62.30769230769231}
    width={5.44}
    x={64.4}
    y={27.692307692307693}
  />
  <rect
    fill="#2ebd59"
    height={41.53846153846154}
    width={5.44}
    x={70.84}
    y={48.46153846153846}
  />
  <rect
    fill="#2ebd59"
    height={10.87912087912088}
    width={5.44}
    x={77.28}
    y={79.12087912087912}
  />
  <rect
    fill="#2ebd59"
    height={11.868131868131869}
    width={5.44}
    x={83.72}
    y={78.13186813186813}
  />
  <rect
    fill="#2ebd59"
    height={25.71428571428571}
    width={5.44}
    x={90.16000000000001}
    y={64.28571428571429}
  />
  <rect
    fill="#2ebd59"
    height={56.37362637362637}
    width={5.44}
    x={96.60000000000001}
    y={33.62637362637363}
  />
  <rect
    fill="#2ebd59"
    height={31.64835164835165}
    width={5.44}
    x={103.04}
    y={58.35164835164835}
  />
  <rect
    fill="#2ebd59"
    height={18.791208791208792}
    width={5.44}
    x={109.48}
    y={71.20879120879121}
  />
  <rect
    fill="#2ebd59"
    height={73.18681318681318}
    width={5.44}
    x={115.92}
    y={16.813186813186817}
  />
  <rect
    fill="#2ebd59"
    height={10.87912087912088}
    width={5.44}
    x={122.36000000000001}
    y={79.12087912087912}
  />
  <rect
    fill="#2ebd59"
    height={63.2967032967033}
    width={5.44}
    x={128.8}
    y={26.7032967032967}
  />
  <rect
    fill="#2ebd59"
    height={75.16483516483517}
    width={5.44}
    x={135.24}
    y={14.835164835164832}
  />
  <rect
    fill="#2ebd59"
    height={87.03296703296704}
    width={5.44}
    x={141.68}
    y={2.9670329670329636}
  />
  <rect
    fill="#2ebd59"
    height={12.857142857142856}
    width={5.44}
    x={148.12}
    y={77.14285714285714}
  />
  <rect
    fill="#2ebd59"
    height={58.35164835164836}
    width={5.44}
    x={154.56}
    y={31.648351648351642}
  />
</svg>
`;

exports[`Storyshots SparkBar 50 data points 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={14.845360824742269}
    width={2.72}
    x={0}
    y={75.15463917525773}
  />
  <rect
    fill="#2ebd59"
    height={36.18556701030928}
    width={2.72}
    x={3.2097959183673472}
    y={53.81443298969072}
  />
  <rect
    fill="#2ebd59"
    height={59.381443298969074}
    width={2.72}
    x={6.4195918367346945}
    y={30.618556701030926}
  />
  <rect
    fill="#2ebd59"
    height={7.422680412371134}
    width={2.72}
    x={9.62938775510204}
    y={82.57731958762886}
  />
  <rect
    fill="#2ebd59"
    height={73.29896907216495}
    width={2.72}
    x={12.839183673469389}
    y={16.70103092783505}
  />
  <rect
    fill="#2ebd59"
    height={77.0103092783505}
    width={2.72}
    x={16.048979591836737}
    y={12.989690721649495}
  />
  <rect
    fill="#2ebd59"
    height={64.94845360824742}
    width={2.72}
    x={19.25877551020408}
    y={25.05154639175258}
  />
  <rect
    fill="#2ebd59"
    height={28.76288659793814}
    width={2.72}
    x={22.46857142857143}
    y={61.23711340206186}
  />
  <rect
    fill="#2ebd59"
    height={15.773195876288659}
    width={2.72}
    x={25.678367346938778}
    y={74.22680412371135}
  />
  <rect
    fill="#2ebd59"
    height={66.80412371134021}
    width={2.72}
    x={28.888163265306126}
    y={23.19587628865979}
  />
  <rect
    fill="#2ebd59"
    height={44.5360824742268}
    width={2.72}
    x={32.097959183673474}
    y={45.4639175257732}
  />
  <rect
    fill="#2ebd59"
    height={64.02061855670104}
    width={2.72}
    x={35.30775510204082}
    y={25.979381443298962}
  />
  <rect
    fill="#2ebd59"
    height={60.30927835051546}
    width={2.72}
    x={38.51755102040816}
    y={29.690721649484537}
  />
  <rect
    fill="#2ebd59"
    height={75.15463917525773}
    width={2.72}
    x={41.72734693877551}
    y={14.845360824742272}
  />
  <rect
    fill="#2ebd59"
    height={84.43298969072166}
    width={2.72}
    x={44.93714285714286}
    y={5.567010309278345}
  />
  <rect
    fill="#2ebd59"
    height={46.39175257731958}
    width={2.72}
    x={48.14693877551021}
    y={43.60824742268042}
  />
  <rect
    fill="#2ebd59"
    height={88.14432989690721}
    width={2.72}
    x={51.356734693877556}
    y={1.8556701030927911}
  />
  <rect
    fill="#2ebd59"
    height={89.0721649484536}
    width={2.72}
    x={54.566530612244904}
    y={0.9278350515463956}
  />
  <rect
    fill="#2ebd59"
    height={37.113402061855666}
    width={2.72}
    x={57.77632653061225}
    y={52.886597938144334}
  />
  <rect
    fill="#2ebd59"
    height={33.402061855670105}
    width={2.72}
    x={60.9861224489796}
    y={56.597938144329895}
  />
  <rect
    fill="#2ebd59"
    height={83.50515463917526}
    width={2.72}
    x={64.19591836734695}
    y={6.4948453608247405}
  />
  <rect
    fill="#2ebd59"
    height={23.19587628865979}
    width={2.72}
    x={67.4057142857143}
    y={66.80412371134021}
  />
  <rect
    fill="#2ebd59"
    height={73.29896907216495}
    width={2.72}
    x={70.61551020408164}
    y={16.70103092783505}
  />
  <rect
    fill="#2ebd59"
    height={55.670103092783506}
    width={2.72}
    x={73.82530612244899}
    y={34.329896907216494}
  />
  <rect
    fill="#2ebd59"
    height={38.04123711340206}
    width={2.72}
    x={77.03510204081633}
    y={51.95876288659794}
  />
  <rect
    fill="#2ebd59"
    height={17.628865979381445}
    width={2.72}
    x={80.24489795918367}
    y={72.37113402061856}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={2.72}
    x={83.45469387755102}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height={43.608247422680414}
    width={2.72}
    x={86.66448979591837}
    y={46.391752577319586}
  />
  <rect
    fill="#2ebd59"
    height={32.47422680412371}
    width={2.72}
    x={89.87428571428572}
    y={57.52577319587629}
  />
  <rect
    fill="#2ebd59"
    height={17.628865979381445}
    width={2.72}
    x={93.08408163265307}
    y={72.37113402061856}
  />
  <rect
    fill="#2ebd59"
    height={33.402061855670105}
    width={2.72}
    x={96.29387755102042}
    y={56.597938144329895}
  />
  <rect
    fill="#2ebd59"
    height={66.80412371134021}
    width={2.72}
    x={99.50367346938776}
    y={23.19587628865979}
  />
  <rect
    fill="#2ebd59"
    height={19.48453608247423}
    width={2.72}
    x={102.71346938775511}
    y={70.51546391752578}
  />
  <rect
    fill="#2ebd59"
    height={52.886597938144334}
    width={2.72}
    x={105.92326530612246}
    y={37.113402061855666}
  />
  <rect
    fill="#2ebd59"
    height={89.0721649484536}
    width={2.72}
    x={109.13306122448981}
    y={0.9278350515463956}
  />
  <rect
    fill="#2ebd59"
    height={85.36082474226804}
    width={2.72}
    x={112.34285714285716}
    y={4.639175257731964}
  />
  <rect
    fill="#2ebd59"
    height={46.39175257731958}
    width={2.72}
    x={115.5526530612245}
    y={43.60824742268042}
  />
  <rect
    fill="#2ebd59"
    height={83.50515463917526}
    width={2.72}
    x={118.76244897959185}
    y={6.4948453608247405}
  />
  <rect
    fill="#2ebd59"
    height={27.835051546391753}
    width={2.72}
    x={121.9722448979592}
    y={62.16494845360825}
  />
  <rect
    fill="#2ebd59"
    height={67.73195876288659}
    width={2.72}
    x={125.18204081632655}
    y={22.268041237113408}
  />
  <rect
    fill="#2ebd59"
    height={36.18556701030928}
    width={2.72}
    x={128.3918367346939}
    y={53.81443298969072}
  />
  <rect
    fill="#2ebd59"
    height={58.453608247422686}
    width={2.72}
    x={131.60163265306124}
    y={31.546391752577314}
  />
  <rect
    fill="#2ebd59"
    height={14.845360824742269}
    width={2.72}
    x={134.8114285714286}
    y={75.15463917525773}
  />
  <rect
    fill="#2ebd59"
    height={79.79381443298969}
    width={2.72}
    x={138.02122448979594}
    y={10.206185567010309}
  />
  <rect
    fill="#2ebd59"
    height={78.8659793814433}
    width={2.72}
    x={141.2310204081633}
    y={11.134020618556704}
  />
  <rect
    fill="#2ebd59"
    height={35.25773195876289}
    width={2.72}
    x={144.44081632653064}
    y={54.74226804123711}
  />
  <rect
    fill="#2ebd59"
    height={74.22680412371133}
    width={2.72}
    x={147.65061224489799}
    y={15.773195876288668}
  />
  <rect
    fill="#2ebd59"
    height={11.1340206185567}
    width={2.72}
    x={150.86040816326533}
    y={78.8659793814433}
  />
  <rect
    fill="#2ebd59"
    height={38.96907216494846}
    width={2.72}
    x={154.07020408163265}
    y={51.03092783505154}
  />
  <rect
    fill="#2ebd59"
    height={6.494845360824741}
    width={2.72}
    x={157.28}
    y={83.50515463917526}
  />
</svg>
`;

exports[`Storyshots SparkBar 50 large 1`] = `
<svg
  height="500"
  width="800"
>
  <rect
    fill="#2ebd59"
    height="82.47422680412372"
    width={13.6}
    x={0}
    y={417.5257731958763}
  />
  <rect
    fill="#2ebd59"
    height="201.03092783505156"
    width={13.6}
    x={16.048979591836734}
    y={298.96907216494844}
  />
  <rect
    fill="#2ebd59"
    height="329.89690721649487"
    width={13.6}
    x={32.09795918367347}
    y={170.10309278350513}
  />
  <rect
    fill="#2ebd59"
    height="41.23711340206186"
    width={13.6}
    x={48.1469387755102}
    y={458.7628865979381}
  />
  <rect
    fill="#2ebd59"
    height="407.21649484536084"
    width={13.6}
    x={64.19591836734693}
    y={92.78350515463916}
  />
  <rect
    fill="#2ebd59"
    height="427.83505154639175"
    width={13.6}
    x={80.24489795918367}
    y={72.16494845360825}
  />
  <rect
    fill="#2ebd59"
    height="360.82474226804123"
    width={13.6}
    x={96.2938775510204}
    y={139.17525773195877}
  />
  <rect
    fill="#2ebd59"
    height="159.79381443298968"
    width={13.6}
    x={112.34285714285713}
    y={340.2061855670103}
  />
  <rect
    fill="#2ebd59"
    height="87.62886597938143"
    width={13.6}
    x={128.39183673469387}
    y={412.37113402061857}
  />
  <rect
    fill="#2ebd59"
    height="371.1340206185567"
    width={13.6}
    x={144.4408163265306}
    y={128.8659793814433}
  />
  <rect
    fill="#2ebd59"
    height="247.42268041237114"
    width={13.6}
    x={160.48979591836735}
    y={252.57731958762886}
  />
  <rect
    fill="#2ebd59"
    height="355.6701030927835"
    width={13.6}
    x={176.53877551020406}
    y={144.3298969072165}
  />
  <rect
    fill="#2ebd59"
    height="335.05154639175254"
    width={13.6}
    x={192.5877551020408}
    y={164.94845360824746}
  />
  <rect
    fill="#2ebd59"
    height="417.5257731958763"
    width={13.6}
    x={208.63673469387754}
    y={82.4742268041237}
  />
  <rect
    fill="#2ebd59"
    height="469.07216494845363"
    width={13.6}
    x={224.68571428571425}
    y={30.927835051546367}
  />
  <rect
    fill="#2ebd59"
    height="257.73195876288656"
    width={13.6}
    x={240.734693877551}
    y={242.26804123711344}
  />
  <rect
    fill="#2ebd59"
    height="489.69072164948454"
    width={13.6}
    x={256.78367346938774}
    y={10.309278350515456}
  />
  <rect
    fill="#2ebd59"
    height="494.8453608247423"
    width={13.6}
    x={272.83265306122445}
    y={5.154639175257728}
  />
  <rect
    fill="#2ebd59"
    height="206.18556701030926"
    width={13.6}
    x={288.8816326530612}
    y={293.8144329896908}
  />
  <rect
    fill="#2ebd59"
    height="185.56701030927834"
    width={13.6}
    x={304.93061224489793}
    y={314.4329896907217}
  />
  <rect
    fill="#2ebd59"
    height="463.9175257731959"
    width={13.6}
    x={320.9795918367347}
    y={36.082474226804095}
  />
  <rect
    fill="#2ebd59"
    height="128.86597938144328"
    width={13.6}
    x={337.0285714285714}
    y={371.13402061855675}
  />
  <rect
    fill="#2ebd59"
    height="407.21649484536084"
    width={13.6}
    x={353.0775510204081}
    y={92.78350515463916}
  />
  <rect
    fill="#2ebd59"
    height="309.27835051546396"
    width={13.6}
    x={369.1265306122449}
    y={190.72164948453604}
  />
  <rect
    fill="#2ebd59"
    height="211.340206185567"
    width={13.6}
    x={385.1755102040816}
    y={288.659793814433}
  />
  <rect
    fill="#2ebd59"
    height="97.9381443298969"
    width={13.6}
    x={401.2244897959183}
    y={402.0618556701031}
  />
  <rect
    fill="#2ebd59"
    height="500"
    width={13.6}
    x={417.2734693877551}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height="242.2680412371134"
    width={13.6}
    x={433.3224489795918}
    y={257.7319587628866}
  />
  <rect
    fill="#2ebd59"
    height="180.41237113402062"
    width={13.6}
    x={449.3714285714285}
    y={319.58762886597935}
  />
  <rect
    fill="#2ebd59"
    height="97.9381443298969"
    width={13.6}
    x={465.4204081632653}
    y={402.0618556701031}
  />
  <rect
    fill="#2ebd59"
    height="185.56701030927834"
    width={13.6}
    x={481.469387755102}
    y={314.4329896907217}
  />
  <rect
    fill="#2ebd59"
    height="371.1340206185567"
    width={13.6}
    x={497.51836734693876}
    y={128.8659793814433}
  />
  <rect
    fill="#2ebd59"
    height="108.24742268041237"
    width={13.6}
    x={513.5673469387755}
    y={391.75257731958766}
  />
  <rect
    fill="#2ebd59"
    height="293.8144329896907"
    width={13.6}
    x={529.6163265306122}
    y={206.18556701030928}
  />
  <rect
    fill="#2ebd59"
    height="494.8453608247423"
    width={13.6}
    x={545.6653061224489}
    y={5.154639175257728}
  />
  <rect
    fill="#2ebd59"
    height="474.2268041237113"
    width={13.6}
    x={561.7142857142857}
    y={25.773195876288696}
  />
  <rect
    fill="#2ebd59"
    height="257.73195876288656"
    width={13.6}
    x={577.7632653061224}
    y={242.26804123711344}
  />
  <rect
    fill="#2ebd59"
    height="463.9175257731959"
    width={13.6}
    x={593.8122448979591}
    y={36.082474226804095}
  />
  <rect
    fill="#2ebd59"
    height="154.63917525773198"
    width={13.6}
    x={609.8612244897959}
    y={345.36082474226805}
  />
  <rect
    fill="#2ebd59"
    height="376.2886597938144"
    width={13.6}
    x={625.9102040816326}
    y={123.71134020618558}
  />
  <rect
    fill="#2ebd59"
    height="201.03092783505156"
    width={13.6}
    x={641.9591836734694}
    y={298.96907216494844}
  />
  <rect
    fill="#2ebd59"
    height="324.74226804123714"
    width={13.6}
    x={658.008163265306}
    y={175.25773195876286}
  />
  <rect
    fill="#2ebd59"
    height="82.47422680412372"
    width={13.6}
    x={674.0571428571428}
    y={417.5257731958763}
  />
  <rect
    fill="#2ebd59"
    height="443.29896907216494"
    width={13.6}
    x={690.1061224489796}
    y={56.70103092783506}
  />
  <rect
    fill="#2ebd59"
    height="438.1443298969072"
    width={13.6}
    x={706.1551020408162}
    y={61.85567010309279}
  />
  <rect
    fill="#2ebd59"
    height="195.8762886597938"
    width={13.6}
    x={722.204081632653}
    y={304.1237113402062}
  />
  <rect
    fill="#2ebd59"
    height="412.3711340206185"
    width={13.6}
    x={738.2530612244898}
    y={87.62886597938149}
  />
  <rect
    fill="#2ebd59"
    height="61.855670103092784"
    width={13.6}
    x={754.3020408163264}
    y={438.1443298969072}
  />
  <rect
    fill="#2ebd59"
    height="216.49484536082474"
    width={13.6}
    x={770.3510204081632}
    y={283.50515463917526}
  />
  <rect
    fill="#2ebd59"
    height="36.08247422680412"
    width={13.6}
    x={786.4}
    y={463.91752577319585}
  />
</svg>
`;

exports[`Storyshots SparkBar Coral color 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="coral"
    height={56.276429130775256}
    width={10.461538461538462}
    x={0}
    y={33.723570869224744}
  />
  <rect
    fill="coral"
    height={58.496476115896634}
    width={10.461538461538462}
    x={12.461538461538462}
    y={31.503523884103366}
  />
  <rect
    fill="coral"
    height={58.60219263899766}
    width={10.461538461538462}
    x={24.923076923076923}
    y={31.397807361002343}
  />
  <rect
    fill="coral"
    height={57.79169929522318}
    width={10.461538461538462}
    x={37.38461538461539}
    y={32.20830070477682}
  />
  <rect
    fill="coral"
    height={77.17306186374314}
    width={10.461538461538462}
    x={49.84615384615385}
    y={12.826938136256857}
  />
  <rect
    fill="coral"
    height={82.52936570086139}
    width={10.461538461538462}
    x={62.30769230769231}
    y={7.470634299138609}
  />
  <rect
    fill="coral"
    height={83.51605324980423}
    width={10.461538461538462}
    x={74.76923076923077}
    y={6.48394675019577}
  />
  <rect
    fill="coral"
    height={90}
    width={10.461538461538462}
    x={87.23076923076923}
    y={0}
  />
  <rect
    fill="coral"
    height={83.79796397807361}
    width={10.461538461538462}
    x={99.6923076923077}
    y={6.202036021926389}
  />
  <rect
    fill="coral"
    height={79.0407204385278}
    width={10.461538461538462}
    x={112.15384615384616}
    y={10.9592795614722}
  />
  <rect
    fill="coral"
    height={83.02270947533282}
    width={10.461538461538462}
    x={124.61538461538461}
    y={6.977290524667183}
  />
  <rect
    fill="coral"
    height={87.4275646045419}
    width={10.461538461538462}
    x={137.07692307692307}
    y={2.5724353954581005}
  />
  <rect
    fill="coral"
    height={36.190289741581836}
    width={10.461538461538462}
    x={149.53846153846155}
    y={53.809710258418164}
  />
</svg>
`;

exports[`Storyshots SparkBar Empty array 1`] = `
<svg
  height={90}
  width={160}
/>
`;

exports[`Storyshots SparkBar No props 1`] = `
<svg
  height={90}
  width={160}
/>
`;

exports[`Storyshots SparkBar Pass regular data 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={56.276429130775256}
    width={10.461538461538462}
    x={0}
    y={33.723570869224744}
  />
  <rect
    fill="#2ebd59"
    height={58.496476115896634}
    width={10.461538461538462}
    x={12.461538461538462}
    y={31.503523884103366}
  />
  <rect
    fill="#2ebd59"
    height={58.60219263899766}
    width={10.461538461538462}
    x={24.923076923076923}
    y={31.397807361002343}
  />
  <rect
    fill="#2ebd59"
    height={57.79169929522318}
    width={10.461538461538462}
    x={37.38461538461539}
    y={32.20830070477682}
  />
  <rect
    fill="#2ebd59"
    height={77.17306186374314}
    width={10.461538461538462}
    x={49.84615384615385}
    y={12.826938136256857}
  />
  <rect
    fill="#2ebd59"
    height={82.52936570086139}
    width={10.461538461538462}
    x={62.30769230769231}
    y={7.470634299138609}
  />
  <rect
    fill="#2ebd59"
    height={83.51605324980423}
    width={10.461538461538462}
    x={74.76923076923077}
    y={6.48394675019577}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={10.461538461538462}
    x={87.23076923076923}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height={83.79796397807361}
    width={10.461538461538462}
    x={99.6923076923077}
    y={6.202036021926389}
  />
  <rect
    fill="#2ebd59"
    height={79.0407204385278}
    width={10.461538461538462}
    x={112.15384615384616}
    y={10.9592795614722}
  />
  <rect
    fill="#2ebd59"
    height={83.02270947533282}
    width={10.461538461538462}
    x={124.61538461538461}
    y={6.977290524667183}
  />
  <rect
    fill="#2ebd59"
    height={87.4275646045419}
    width={10.461538461538462}
    x={137.07692307692307}
    y={2.5724353954581005}
  />
  <rect
    fill="#2ebd59"
    height={36.190289741581836}
    width={10.461538461538462}
    x={149.53846153846155}
    y={53.809710258418164}
  />
</svg>
`;

exports[`Storyshots SparkBar Two data points 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={30}
    width={68}
    x={0}
    y={60}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={68}
    x={92}
    y={0}
  />
</svg>
`;
